# dataclass-map-and-log

./: Pipfile  README.md  docker-compose.yml  pyproject.toml  run_tests_ci  setup.py
.github/workflows/: build.yml
tests/: test_dataclass_map_and_log.py
