[tool.poetry]
name = "dataclass_map_and_log"
version = "0.1.3"
description = "Map a dict to a dataclass and log differences"
authors = ["José Ignacio Amelivia Santiago <hello@namelivia.com>"]
readme = "README.md"
packages = [{include = "dataclass_map_and_log"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "==2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
codecov = "*"
black = "*"
pre-commit = "*"
pudb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
